Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-46410

getShaderPrecisionFormat fails with INVALID_OPERATION error on Mac OS X with some GPU drivers

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.5.0 RC
    • 5.5.0 Beta
    • Canvas3D
    • None
    • Mac OS X 10.9
    • macOS
    • f12f84d21900c5c33fc213b26b0b3e11ac4f99c7

    Description

      On Mac OS X calling glGetShaderPrecisionFormat() causes INVALID_OPERATION error. Suggest we either only call this on OpenGL ES 2 and return default "desktop" values otherwise.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            e0348803 Miikka Heikkinen
            pakerane Pasi Keränen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes