Fix getShaderPrecisionFormat on desktop

Task-number: QTBUG-46410
Change-Id: I0f221ff495f9d7910e8c2f8f88aa639556e8cc96
Reviewed-by: Tomi Korpipää <tomi.korpipaa@theqtcompany.com>
Reviewed-by: Pasi Keränen <pasi.keranen@digia.com>